--- a/templates/reservas/calendario.html
+++ b/templates/reservas/calendario.html
@@ -30,7 +30,7 @@ document.addEventListener('DOMContentLoaded', function() {
       right: 'dayGridMonth,timeGridWeek,timeGridDay'
     },
     eventSources: [
-      { url: "{% url 'eventos_clases_json' %}" },
+      { url: "{% url 'eventos_talleres_json' %}" },
       { url: "{% url 'eventos_canchas_json' %}" }
     ]
   });
