--- a/templates/planes/lista_planes.html
+++ b/templates/planes/lista_planes.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Planes</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-light">
+
 {% extends 'users/base_dashboard.html' %}
 {% block title %}Planes{% endblock %}
 {% block content %}
@@ -22,7 +15,7 @@
         <th>Descripción</th>
         <th>Precio</th>
         <th>Duración</th>
-        <th>Clases</th>
+        <th>Talleres</th>
         <th>Canchas</th>
         <th>Acciones</th>
       </tr>
@@ -34,7 +27,7 @@
         <td>{{ plan.descripcion|default:"-" }}</td>
         <td>${{ plan.precio }}</td>
         <td>{{ plan.duracion }} días</td>
-        <td>{% if plan.puede_reservar_clases %}✅{% else %}❌{% endif %}</td>
+        <td>{% if plan.puede_reservar_talleres %}✅{% else %}❌{% endif %}</td>
         <td>{% if plan.puede_reservar_canchas %}✅{% else %}❌{% endif %}</td>
         <td>
           <a href="{% url 'editar_plan' plan.id %}" class="btn btn-sm btn-outline-dark">✏️</a>
@@ -48,6 +41,3 @@
   </table>
 </div>
 {% endblock %}
-
-</body>
-</html>
